# pygeoapi-prefect

./: README.md  pyproject.toml  requirements.txt
docs/images/: sequence_diagram.puml
src/pygeoapi_prefect/: cli.py  manager.py  schemas.py  utils.py
src/pygeoapi_prefect/examples/: hi_prefect_world.py  simple_prefect.py
src/pygeoapi_prefect/process/: base.py
