[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeoapi_prefect"
version = "0.1.0"
authors = [{ name = "52N authors", email = "info@52north.org" }]
description = "pygeoapi_prefect"
readme = "README.md"
license = { file="LICENSE" }
#requires-python = ">=3.8"
#classifiers = [
#    "Programming Language :: Python :: 3.8",
#    "Operating System :: OS Independent",
#]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

#[tool.setuptools.package-data]
